# ITMO-3-course

db/: db4  db_create
kypr/: ДЗ2 Голиков Андрей Сергеевич.docx  ДЗ3 Голиков Андрей Сергеевич.docx
llp/: llp_1  llp_2  llp_3
llp/llp-lab2/: ast.c  ast.h  lex.yy.c  lexer.l  main  parser.tab.c  parser.y  printer.h  types.h
llp/test/: CMakeLists.txt  main.c
os/: Makefile  addProgram.sh  deleteProgram.sh
os/lab1/: CMakeLists.txt
sem5/csa/: README.md  integration_test.py  pyproject.toml  test_out
sem5/csa/golden/: cat.yml  hello_user.yml  hello_world.yml  math.yml  prob_2.yml  prob_2_optimized.yml  read.yml
sem5/csa/interpreter/: lexer.py  parser.py  translator.py
sem5/csa/machine/: emulator.py  isa.py
sem5/db/: db3  db_create
sem5/db/cw/: cw.sql  cw_ddl.sql
sem5/kypr/: ДЗ1 Голиков Андрей Сергеевич.docx  ДЗ4 Голиков Андрей Сергеевич.docx
sem5/os/: test
sem6/: links.py
sem6/compilers/: compilers2.docx  Голиков_А_ДЗ1.docx
sem6/eng/: .gitignore  index.js  nodemon.json  package-lock.json  package.json
sem6/networks/: netemul  ДЗ_Кодирование.ppsx
spo/1.3_3/: Makefile  lib.c  solution  solution.c
spo/4.6_1/: solution
spo/4.6_2/: solution.c
spo/4.6_3/: Makefile  solution  solution.c
spo/4.6_4/: Makefile  solution.c
spo/4.6_5/: solution  solution.c
spo/5.7_1/: solution
spo/5.7_2/: solution  solution.c
spo/5.7_3/: solution
spo/8.1_2/: Makefile  solution  solution.c
spo/step3/: CMakeLists.txt  solution.c
sysii/: README.MD  homm3.owx  sysii.pl
sysii/lab4/: build.sbt
sysii/lab6/: build.sbt  untitled.sc
sysii/lab7/: untitled.sc
(+108 files in other folders)
